kubernetes/apps/babybuddy/babybuddy/app/deployment-babybuddy-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: babybuddy-server
  namespace: babybuddy
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: babybuddy
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: babybuddy
        db: postgres
        env: production
    spec:
      containers:
      - env:
        - name: DB_USER
          valueFrom:
            secretKeyRef:
              key: username
              name: babybuddy-postgres-app
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: babybuddy-postgres-app
        image: lscr.io/linuxserver/babybuddy:v2.10.0-ls245
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        name: babybuddy-server
        ports:
        - containerPort: 8000
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 10
        resources:
          limits:
            cpu: 300m
            memory: 512Mi
          requests:
            cpu: 80m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /config
          name: babybuddy-config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: babybuddy-config
        persistentVolumeClaim:
          claimName: babybuddy-config
