kubernetes/apps/babybuddy/babybuddy/app/service-authentik-outpost.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: authentik-outpost
  name: authentik-outpost
  namespace: babybuddy
spec:
  externalName: ak-outpost-default-proxy-outpost.authentik.svc.${CLUSTER_DOMAIN}
  ports:
  - name: 9000-9000
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: authentik-outpost
  sessionAffinity: None
  type: ExternalName
