kubernetes/apps/babybuddy/babybuddy/app/ingress-babybuddy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-letsencrypt
    nginx.ingress.kubernetes.io/auth-response-headers: Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
    nginx.ingress.kubernetes.io/auth-signin: https://bb.${BASE_DOMAIN}/outpost.goauthentik.io/start?rd=$scheme://$http_host$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-url: http://ak-outpost-default-proxy-outpost.authentik.svc.${CLUSTER_DOMAIN}:9000/outpost.goauthentik.io/auth/traefik
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: babybuddy-ingress
  namespace: babybuddy
spec:
  ingressClassName: nginx
  rules:
  - host: bb.${BASE_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: authentik-outpost
            port:
              number: 9000
        path: /outpost.goauthentik.io
        pathType: ImplementationSpecific
      - backend:
          service:
            name: babybuddy-svc
            port:
              number: 8000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - bb.${BASE_DOMAIN}
    secretName: babybuddy-http-tls
